--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyWeatherApp</string>
+    <string name="app_name">WeatherApp</string>
     <!--
      By convention, "action" denotes that this String will be used as the label for an Action,
      typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
